# JMD-Online-Book

./: .gitattributes  .gitignore  .gitmodules  .graphifyignore  AGENTS.md  AUTONOMOUS_PROMPT.md  AUTO_DEPLOY_GUIDE.md  CLAUDE.md  DATABASE_DEBUG.md  DEPLOYMENT_COMPLETE.md  FREE_HOSTING_GUIDE.md  GEMINI.md  INCIDENT_REPORT.md  KOYEB_SETUP.md  Kinetic_implementation_plan.md  Master Prompt for Sports Betting Exchange.md  QUICKSTART_KOYEB.md  QUICKSTART_RENDER.md  README.md  SESSION_SUMMARY.md  SUMMARY.md  Site Analysis — nohmy99.com.md  admin_cookies.txt  check-jmd-db.js  cookies.txt  debug-auth.json  debug_kinetic_ledger.js  debug_live_system.js  extract_semantic.py  filter_files.py  finish.js  fix_ci.sh  fix_ci_2.sh  fix_ci_3.sh  fix_ci_4.sh  fix_ci_5.sh  fix_env.py  fix_eslint.py  fix_frontend_route.js  fix_git_submodules.sh  (+32 more)
.ai/: session-logs.md
.claude/: settings.local.json
.qwen/: settings.json  settings.json.orig
.vercel/: project.json
ai-system/: orchestrator.md
graphify-out/: .batch1.txt  .graphify_cached.json  .graphify_uncached.txt  .to_extract.json  .to_extract_final.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
jmd-mobile/: App.js  app.json  eas.json  package-lock.json  package.json
public/: manifest.json  offline.html  sw.js
sbe/: .cursorrules  DEPLOYMENT.md  mission.md
sbe/backend/: seed.ts  (+20 more)
sbe/engine/: Cargo.toml
sbe/engine/src/: book.rs  engine.rs  lib.rs  main.rs  models.rs
scripts/: bootstrap-remote.mjs  create-admin-user.mjs  insert-default-games.mjs  insert-payment-methods.mjs  run-migrations.mjs
src/: middleware.ts
(+456 files in other folders)
