[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sbe-engine"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
dashmap = "5.5"
